--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-  "engine": {
+  "engines": {
     "node": "12.16.3"
   },
   "repository": {
